Repair height on mobile devices

--- a/src/components/Terminal/Terminal.module.scss
+++ b/src/components/Terminal/Terminal.module.scss
@@ -4,6 +4,7 @@
   width: 100%;
   display: flex;
   flex-direction: column;
+  max-height: 100%;
   @media (min-width: 640px) {
     max-width: 640px;
   }
