--- a/src/components/Terminal/components/Window/Window.module.scss
+++ b/src/components/Terminal/components/Window/Window.module.scss
@@ -2,5 +2,4 @@
   padding: 4px;
   overflow-y: scroll;
   flex-grow: 1;
-  max-height: calc(100vh - 30px);
 }
